--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,22 +1,8 @@
-<header id="header">
-  <h1 id="logo">
-    <a [routerLink]="['/']"></a>
-  </h1>
 
-  <div id="menu">
-    <a [routerLink]="['/']"  routerLinkActive="active" class="btn">Home</a>
-    <a [routerLink]="['/vehicle']" routerLinkActive="active" class="btn">Vehicles</a>
-    <a [routerLink]="['/employee']" class="btn">Employees</a>
-  </div>
-
-  <div class="color"></div>
-  <div class="clear"></div>
-</header>
-
-<div class="shadow"></div>
-
-<div id="container">
-    <h5>Above router outlet</h5>
+  <nav>
+    <a [routerLink]="['/vehicles']" routerLinkActive="active" class="btn">Vehicles</a>
+    <a [routerLink]="['/employees']" routerLinkActive="active" class="btn">Employees</a>
+  </nav>
+    
   <router-outlet></router-outlet>
-  <h5>Below router outlet</h5>
-</div>
+  
